CommandWrapper class quality assurance